# rust-actix

./: .env  Cargo.toml  readme.md
migrations/2022-07-22-030515_tb_user/: down.sql  up.sql
src/: actions.rs  main.rs  schema.rs
src/models/: mod.rs  tb_user.rs
src/routes/: mod.rs  test_view.rs
