[package]
name = "rust-rocket-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
# diesel = { version = "1.4", features = ["postgres"] }
# diesel = { version = "1.4", features = ["sqlite"] }
diesel = { version = "1.4", features = ["mysql", "r2d2"] }
dotenv = "0.15"
# diesel = { version = "1.4.0", features = ["postgres"] }
# dotenv = "0.9.0"
# r2d2-diesel = "1.0"
# r2d2 = "0.8"
env_logger = "0.9"
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }